src/TileLayout.module.css
.tileLayout {
  --tab-strip-scrollbar-z: 80;
  --tab-strip-z: 75;
  --tab-group-z: 50;
  --tile-border-z: 100;
  --tile-border-overlay-z: 101;

  display: flex;
  flex-direction: column;

  /* TODO: Are these needed? */
  position: relative;
  width: 100%;
  height: 100%;
}

.tileGroup {
  display: flex;
}

.tile,
.tileGroup {
  box-sizing: border-box;
  position: relative;
}

.tile,
.tileGroup {
  overflow: hidden;

  /* TODO: Move to default styles */
  background: #282c34;
}

.tileGroup.row > .tile,
.tileGroup.row > .tileTabGroup,
.tileGroup.row > .tileGroup {
  /* Dimensions are controlled by flex-grow. */
  width: 0;
}

.tileGroup.column > .tile,
.tileGroup.column > .tileTabGroup,
.tileGroup.column > .tileGroup {
  /* Dimensions are controlled by flex-grow. */
  height: 0;
}

.tileTabGroup {
  display: flex;
  flex-direction: column;

  z-index: var(--tab-group-z);
}

.tileTabGroup .tile {
  flex-grow: 1;
}

.tabStrip::after,
.tabContainer::after,
.tile::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  pointer-events: none;
}

.draggingDescendant .tabStrip::after,
.draggingDescendant .tabContainer::after,
.draggingDescendant .tile::after {
  transition: 200ms ease-out;
}

.draggingDescendant .draggingOtherTileOver::after {
  --movement-duration: 100ms;

  transition: opacity 200ms, top var(--movement-duration) ease-out,
    bottom var(--movement-duration) ease-out,
    left var(--movement-duration) ease-out,
    right var(--movement-duration) ease-out;
  opacity: 1;
  background: rgba(255, 255, 255, 0.1);
}

.tileBorder {
  /* TODO: Allow overriding in JS */
  --thickness: 1px;
  --tolerance: 8px;
  background: black;
  position: relative;

  z-index: var(--tile-border-z);
}

.tileBorder::after {
  content: ' ';
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  --size: calc(var(--thickness) + 2 * var(--tolerance));

  z-index: var(--tile-border-overlay-z);

  transition: transform 200ms ease-out, opacity 200ms ease-out;
}

.tileBorder.vertical::after {
  cursor: ew-resize;
  width: var(--size);
  transform: translateX(0.5px) translateX(-50%) scaleX(0.5);
  opacity: 0;
}

.tileBorder.vertical:hover::after {
  transform: translateX(0.5px) translateX(-50%);
  opacity: 1;
}

.tileBorder.vertical:hover:active::after {
  opacity: 0.5;
}

.tileBorder.horizontal::after {
  cursor: ns-resize;
  height: var(--size);
  transform: translateY(0.5px) translateY(-50%) scaleY(0.5);
  opacity: 0;
}

.tileBorder.horizontal:hover::after {
  transform: translateY(0.5px) translateY(-50%);
  opacity: 1;
}

.tileBorder.horizontal:hover::after,
.tileBorder.vertical:hover::after {
  /* TODO: Move to "default" styles */
  background: rgba(0, 0, 0, 0.1);
}

.tileBorder.horizontal {
  height: var(--thickness);
  width: 100%;
}

.tileBorder.vertical {
  height: 100%;
  width: var(--thickness);
}

.tabStrip {
  position: relative;

  display: flex;
  flex-direction: row;
  align-items: stretch;

  z-index: var(--tab-strip-z);

  width: 100%;
  max-width: 100%;

  /* TODO: Move these into "default" styles? */
  background: #21252b;
  min-height: 36px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.27), 0 3px 5px rgba(0, 0, 0, 0.27);
}

.tabStripTabs::-webkit-scrollbar {
  display: none;
}

.tabStripTabs {
  display: flex;
  overflow-x: scroll;
}

.tabContainer {
  /* TODO: Move these into "default" styles */
  border-right: 1px solid black;
  background: #21252b;
  display: flex;
  align-items: center;
  padding: 0 12px;
  flex-grow: 0;
  white-space: nowrap;
  cursor: pointer;
  position: relative;

  z-index: 1;

  transition: color 50ms ease-out;
}

.tabContainer.activeTab {
  background: #383e4a;
}

.tabContainer:not(.activeTab) {
  color: rgba(255, 255, 255, 0.3);
}

.top::after {
  bottom: 50%;
}

.bottom::after {
  top: 50%;
}

.left::after {
  right: 50%;
}

.right::after {
  left: 50%;
}

.dragging::after {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

